added scss file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>WordClock</h1>
+    <div class="heading"><h1>WordClock</h1></div>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam ipsa
       voluptate non harum quisquam a assumenda eligendi, molestiae, reiciendis
