--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>WordClock</title>
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="heading"><h1>WordClock</h1></div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam ipsa
-      voluptate non harum quisquam a assumenda eligendi, molestiae, reiciendis
-      voluptates eius dolores distinctio omnis. Nihil repellat quam maxime esse
-      necessitatibus!
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam ipsa
-      voluptate non harum quisquam a assumenda eligendi, molestiae, reiciendis
-      voluptates eius dolores distinctio omnis. Nihil repellat quam maxime esse
-      necessitatibus!
-    </p>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam ipsa
-      voluptate non harum quisquam a assumenda eligendi, molestiae, reiciendis
-      voluptates eius dolores distinctio omnis. Nihil repellat quam maxime esse
-      necessitatibus!
-    </p>
+    <div class="navbar">
+      <div>
+        <h1><span class="spanC">WORD</span><span>CLOCK</span></h1>
+      </div>
+    </div>
+    <div class="frame"><div id="matrix"></div></div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
