--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <h1><span class="spanC">WORD</span><span>CLOCK</span></h1>
       </div>
     </div>
-    <div class="frame"><div id="matrix"></div></div>
+    <div class="center">
+      <div class="frame"><div id="matrix"></div></div>
+    </div>
 
     <script src="script/script.js"></script>
   </body>
