--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     />
   </head>
   <body>
-    <div class="navbar">
-      <div>
-        <h1><span class="spanC">WORD</span><span>CLOCK</span></h1>
+    <div class="content">
+      <div class="navbar">
+        <div>
+          <h1><span class="spanC">WORD</span><span>CLOCK</span></h1>
+        </div>
       </div>
-    </div>
-    <div class="center">
-      <div class="frame"><div id="matrix"></div></div>
+      <div class="center">
+        <div class="frame"><div id="matrix"></div></div>
+      </div>
     </div>
 
     <script src="script/script.js"></script>
