Added images for the home section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
     <nav class="navbar">
       <div class="navbar__container">
         <a href="#home" id="navbar__logo"><span>Word</span>Clock</a>
-        <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span> <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
             <a href="#home" class="navbar__links" id="home-page">Home</a>
@@ -24,10 +20,8 @@
           <li class="navbar__item">
             <a href="#about" class="navbar__links" id="about-page">About</a>
           </li>
-          <li class="navbar__item">
-            <a href="#contact" class="navbar__links" id="contact-page"
-              >Contact</a
-            >
+          <li class="navbar__btn">
+            <a href="#contact" class="button" id="contact-page">Contact</a>
           </li>
         </ul>
       </div>
@@ -36,9 +30,14 @@
     <!-- Hero Section -->
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="hero__heading">Choose your <span>colors</span></h1>
-        <p class="hero__description">Unlimited Possibilities</p>
-        <button class="main__btn"><a href="#">Explore</a></button>
+        <div class="crop">
+          <div class="image__container">
+            <!--img class="image" src="images/no bg/1NoBG.png" alt="no bg" /-->
+            <!--img class="image" src="images/no bg/2NoBG.png" alt="no bg" /-->
+            <img class="image" src="images/no bg/3NoBG.png" alt="no bg" />
+            <!--img class="image" src="images/no bg/4NoBG.png" alt="no bg" /-->
+          </div>
+        </div>
       </div>
     </div>
 
