--- a/index.html
+++ b/index.html
@@ -4,43 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WordClock</title>
-
+    <title>WordClock support page</title>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <!-- Navbar Section -->
-    <nav class="navbar">
-      <div class="navbar__container">
-        <a href="#home" id="navbar__logo"><span>Word</span>Clock</a>
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="#home" class="navbar__links" id="home-page">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="#about" class="navbar__links" id="about-page">About</a>
-          </li>
-          <li class="navbar__btn">
-            <a href="#contact" class="button" id="contact-page">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="navbar">
+      <div class="container">
+        <a class="logo" href="#home"><span>Word</span>Clock</a>
 
-    <!-- Hero Section -->
-    <div class="hero" id="home">
-      <div class="hero__container">
-        <div class="crop">
-          <div class="image__container">
-            <!--img class="image" src="images/no bg/1NoBG.png" alt="no bg" /-->
-            <!--img class="image" src="images/no bg/2NoBG.png" alt="no bg" /-->
-            <img class="image" src="images/no bg/3NoBG.png" alt="no bg" />
-            <!--img class="image" src="images/no bg/4NoBG.png" alt="no bg" /-->
+        <img
+          class="mobile-menu"
+          id="mobile-cta"
+          src="images/Hamburger_icon.svg"
+          alt="hamburger-icon"
+        />
+
+        <nav>
+          <img src="images/close.svg" alt="close button" />
+          <ul class="primary-nav">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact" id="contact-button">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <section class="hero">
+      <div class="container">
+        <div class="left-col">
+          <p class="subhead">Lorem Ipsum</p>
+          <h1>Lorem Ipsum</h1>
+        </div>
+        <div class="right-col">
+          <div class="images-container">
+            <div class="card">
+              <img
+                class="cropped2"
+                src="images/no bg/1NoBG.png"
+                alt="screenshot image"
+              />
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <script src="script/script.js"></script>
+    </section>
+    <section class="about">
+      <div class="container"></div>
+    </section>
   </body>
 </html>
