added image caroussel

--- a/index.html
+++ b/index.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WordClock support page</title>
     <link rel="stylesheet" href="styles/styles.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="navbar">
-      <div class="container">
-        <a class="logo" href="#home"><span>Word</span>Clock</a>
+        <div class="container">
+            <a class="logo" href="#home"><span>Word</span>Clock</a>
 
-        <img
-          class="mobile-menu"
-          id="mobile-cta"
-          src="images/Hamburger_icon.svg"
-          alt="hamburger-icon"
-        />
+            <img class="mobile-menu" id="mobile-cta" src="images/Hamburger_icon.svg" alt="hamburger-icon" />
 
-        <nav>
-          <img src="images/close.svg" alt="close button" />
-          <ul class="primary-nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact" id="contact-button">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
+            <nav>
+                <img src="images/close.svg" alt="close button" />
+                <ul class="primary-nav">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact" id="contact-button">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
     <section class="hero">
-      <div class="container">
-        <div class="left-col">
-          <p class="subhead">Lorem Ipsum</p>
-          <h1>Lorem Ipsum</h1>
-        </div>
-        <div class="right-col">
-          <div class="images-container">
-            <div class="card">
-              <img
-                class="cropped2"
-                src="images/no bg/1NoBG.png"
-                alt="screenshot image"
-              />
+        <div class="container">
+            <div class="left-col">
+                <p class="subhead">Lorem Ipsum</p>
+                <h1>Lorem Ipsum</h1>
             </div>
-          </div>
+            <div class="right-col">
+                <div class="carousel">
+                    <button class="carousel-button previous" id="previous"><</button>
+                    <div class="carousel-images">
+                        <img class="cropped2" src="images/no bg/1NoBG.png" alt="screenshot image" />
+                        <img class="cropped2" src="images/no bg/2NoBG.png" alt="screenshot image" />
+                        <img class="cropped2" src="images/no bg/3NoBG.png" alt="screenshot image" />
+                        <img class="cropped2" src="images/no bg/4NoBG.png" alt="screenshot image" />
+                    </div>
+                    <button class="carousel-button next" id="next">></button>
+                </div>
+            </div>
         </div>
-      </div>
     </section>
     <section class="about">
-      <div class="container"></div>
+        <div class="container"></div>
     </section>
-  </body>
+
+    <script src="script/script.js"></script>
+</body>
+
 </html>
