added layout and the carousal

--- a/index.html
+++ b/index.html
@@ -27,27 +27,46 @@
         </div>
     </div>
     <section class="hero">
-        <div class="container">
+        <div class="grid-container">
             <div class="left-col">
                 <p class="subhead">Lorem Ipsum</p>
                 <h1>Lorem Ipsum</h1>
             </div>
             <div class="right-col">
-                <div class="carousel">
-                    <button class="carousel-button previous" id="previous"><</button>
-                    <div class="carousel-images">
-                        <img class="cropped2" src="images/no bg/1NoBG.png" alt="screenshot image" />
-                        <img class="cropped2" src="images/no bg/2NoBG.png" alt="screenshot image" />
-                        <img class="cropped2" src="images/no bg/3NoBG.png" alt="screenshot image" />
-                        <img class="cropped2" src="images/no bg/4NoBG.png" alt="screenshot image" />
+                <div class="crousel-container">
+                    <div id="card-Container">
+                        <div class="card">
+                            <img class="cropped" id="img-1" src="images/no bg/1NoBG.png" alt="">
+                        </div>
+                        <div class="card">
+                            <img class="cropped" id="img-2" src="images/no bg/2NoBG.png" alt="">
+                        </div>
+                        <div class="card">
+                            <img class="cropped" id="img-3" src="images/no bg/3NoBG.png" alt="">
+                        </div>
+                        <div class="card">
+                            <img class="cropped" id="img-4" src="images/no bg/4NoBG.png" alt="">
+                        </div>
+                        <div class="card">
+                            <img class="cropped" id="img-4" src="images/no bg/1NoBG.png" alt="">
+                        </div>
                     </div>
-                    <button class="carousel-button next" id="next">></button>
                 </div>
+
             </div>
-        </div>
+            <div class="rado-input">
+                <input type="radio" id="page1" name="currentPage" value="1">
+                <input type="radio" id="page2" name="currentPage" value="2">
+                <input type="radio" id="page3" name="currentPage" value="3">
+                <input type="radio" id="page4" name="currentPage" value="4">
+            </div>
     </section>
     <section class="about">
-        <div class="container"></div>
+        <div class="container">
+
+
+        </div>
+
     </section>
 
     <script src="script/script.js"></script>
