--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     </div>
     <section class="hero">
         <div class="grid-container">
-            <div class="left-col">
-                <p class="subhead">Lorem Ipsum</p>
-                <h1>Lorem Ipsum</h1>
+            <div class="left-section">
+                <div class="hero__container">
+                    <h1 class="hero__heading">Clock <span>reimagined</span></h1>
+                    <!--p class="hero__description">Unlimited Possibilities</p-->
+                </div>
             </div>
-            <div class="right-col">
+            <div class="right-section">
                 <div class="crousel-container">
                     <div id="card-Container">
                         <div class="card">
@@ -53,12 +55,6 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="rado-input">
-                <input type="radio" id="page1" name="currentPage" value="1">
-                <input type="radio" id="page2" name="currentPage" value="2">
-                <input type="radio" id="page3" name="currentPage" value="3">
-                <input type="radio" id="page4" name="currentPage" value="4">
             </div>
     </section>
     <section class="about">
