--- a/index.html
+++ b/index.html
@@ -31,28 +31,11 @@
             <div class="left-section">
                 <div class="hero__container">
                     <h1 class="hero__heading">Clock <span>reimagined</span></h1>
-                    <!--p class="hero__description">Unlimited Possibilities</p-->
                 </div>
             </div>
             <div class="right-section">
-                <div class="crousel-container">
-                    <div id="card-Container">
-                        <div class="card">
-                            <img class="cropped" id="img-1" src="images/no bg/1NoBG.png" alt="">
-                        </div>
-                        <div class="card">
-                            <img class="cropped" id="img-2" src="images/no bg/2NoBG.png" alt="">
-                        </div>
-                        <div class="card">
-                            <img class="cropped" id="img-3" src="images/no bg/3NoBG.png" alt="">
-                        </div>
-                        <div class="card">
-                            <img class="cropped" id="img-4" src="images/no bg/4NoBG.png" alt="">
-                        </div>
-                        <div class="card">
-                            <img class="cropped" id="img-4" src="images/no bg/1NoBG.png" alt="">
-                        </div>
-                    </div>
+                <div class="carousel-container">
+
                 </div>
 
             </div>
