final layout -- needs slider script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="container">
             <a class="logo" href="#home"><span>Word</span>Clock</a>
 
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
         </div>
-    </div>
+    </nav>
     <section class="hero">
         <div class="grid-container">
             <div class="left-section">
@@ -35,7 +35,15 @@
             </div>
             <div class="right-section">
                 <div class="carousel-container">
-
+                    <div class="image-container left-image">
+                        <img class="image" src="images/no bg/1NoBG.png" alt="">
+                    </div>
+                    <div class="image-container center-image">
+                        <img class="image" src="images/no bg/2NoBG.png" alt="">
+                    </div>
+                    <div class="image-container right-image">
+                        <img class="image" src="images/no bg/3NoBG.png" alt="">
+                    </div>
                 </div>
 
             </div>
