--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             </div>
             <div class="right-section">
                 <div class="carousel-container">
+                    <div class="background-text">
+                        <h1>jkshdjks jkshjnshkljhf slkhglkmshklgshgklhsjk mhjfhgwhdgmlskjfhgkljh gklhmdflkhgslkdhfmglkdh fmglkdshf;mgldhmglkhdm fklghmdsklghklmdfghmldk sghmlkdhg
+                        </h1>
+                    </div>
                     <div class="image-container left-image">
                         <img class="image" src="images/no bg/1NoBG.png" alt="">
                     </div>
