--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WordClock support page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/styles.css" />
+
 </head>
 
 <body>
@@ -36,7 +38,7 @@
             <div class="right-section">
                 <div class="carousel-container">
                     <div class="background-text">
-                        <h1>jkshdjks jkshjnshkljhf slkhglkmshklgshgklhsjk mhjfhgwhdgmlskjfhgkljh gklhmdflkhgslkdhfmglkdh fmglkdshf;mgldhmglkhdm fklghmdsklghklmdfghmldk sghmlkdhg
+                        <h1>jMHFHIHSINLDFUSHJDKMHFJSKHDM JFKHSDHJSMHDJKVHJSKNDHMHCJHU SJDHFSIDBISBIDBISGDIFGSDIUFI USGDUIFGSIUDHJKCBJKZCBOIHAFH
                         </h1>
                     </div>
                     <div class="image-container left-image">
