--- a/index.html
+++ b/index.html
@@ -12,57 +12,59 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <a class="logo" href="#home"><span>Word</span>Clock</a>
+    <div class="main-container">
+        <nav class="navbar">
+            <div class="container">
+                <a class="logo" href="#home"><span>Word</span>Clock</a>
 
-            <img class="mobile-menu" id="mobile-cta" src="images/Hamburger_icon.svg" alt="hamburger-icon" />
+                <img class="mobile-menu" id="mobile-cta" src="images/Hamburger_icon.svg" alt="hamburger-icon" />
 
-            <nav>
-                <img src="images/close.svg" alt="close button" />
-                <ul class="primary-nav">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact" id="contact-button">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </nav>
-    <section class="hero">
-        <div class="grid-container">
-            <div class="left-section">
-                <div class="hero__container">
-                    <h1 class="hero__heading">Clock <span>reimagined</span></h1>
-                </div>
+                <nav>
+                    <img src="images/close.svg" alt="close button" />
+                    <ul class="primary-nav">
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact" id="contact-button">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="right-section">
-                <div class="carousel-container">
-                    <div class="background-text">
-                        <h1>jMHFHIHSINLDFUSHJDKMHFJSKHDM JFKHSDHJSMHDJKVHJSKNDHMHCJHU SJDHFSIDBISBIDBISGDIFGSDIUFI USGDUIFGSIUDHJKCBJKZCBOIHAFH
-                        </h1>
-                    </div>
-                    <div class="image-container left-image">
-                        <img class="image" src="images/no bg/1NoBG.png" alt="">
-                    </div>
-                    <div class="image-container center-image">
-                        <img class="image" src="images/no bg/2NoBG.png" alt="">
-                    </div>
-                    <div class="image-container right-image">
-                        <img class="image" src="images/no bg/3NoBG.png" alt="">
+        </nav>
+        <section class="hero">
+            <div class="grid-container">
+                <div class="left-section">
+                    <div class="hero__container">
+                        <h1 class="hero__heading">Clock <span>reimagined</span></h1>
                     </div>
                 </div>
+                <div class="right-section">
+                    <div class="carousel-container">
+                        <div class="background-text">
+                            <h1>jMHFHIHSINLDFUSHJDKMHFJSKHDMJJFGHJKGDHTFJGFHV JFKHSDHJSMHDJKVHJSKNDHMHCJHUJJFGHJKGDHTFJGFHV SJDHFSIDBISBIDBISGDI<span>FGSDIU</span>>FIJJFGHJKGDHTFJGFHV USGDUIFGSIUDHJKCBJKZCBOIHAFHJJFGHJKGDHTFJGFHV jMHFHIHSINLDFUSHJDKMHFJSKHDMJJFGHJKGDHTFJGFHV
+                                JFKHSDHJSMHDJKVHJSKNDHMHCJHUJJFGHJKGDHTFJGFHV SJDHFSIDBISBIDBISGDIFGSDIUFIJJFGHJKGDHTFJGFHV
+                            </h1>
+                        </div>
+                        <div class="image-container left-image">
+                            <img class="image" src="images/no bg/1NoBG.png" alt="">
+                        </div>
+                        <div class="image-container center-image">
+                            <img class="image" src="images/no bg/2NoBG.png" alt="">
+                        </div>
+                        <div class="image-container right-image">
+                            <img class="image" src="images/no bg/3NoBG.png" alt="">
+                        </div>
+                    </div>
+
+                </div>
+        </section>
+        <section class="about">
+            <div class="container">
+
 
             </div>
-    </section>
-    <section class="about">
-        <div class="container">
 
-
+        </section>
         </div>
-
-    </section>
-
-    <script src="script/script.js"></script>
+        <script src="script/script.js"></script>
 </body>
 
 </html>
