refined word matrix

--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
                 <div class="right-section">
                     <div class="carousel-container">
                         <div class="background-text">
-                            <h1>jMHFHIHSINLDFUSHJDKMHFJSKHDMJJFGHJKGDHTFJGFHV JFKHSDHJSMHDJKVHJSKNDHMHCJHUJJFGHJKGDHTFJGFHV SJDHFSIDBISBIDBISGDI<span>FGSDIU</span>>FIJJFGHJKGDHTFJGFHV USGDUIFGSIUDHJKCBJKZCBOIHAFHJJFGHJKGDHTFJGFHV jMHFHIHSINLDFUSHJDKMHFJSKHDMJJFGHJKGDHTFJGFHV
-                                JFKHSDHJSMHDJKVHJSKNDHMHCJHUJJFGHJKGDHTFJGFHV SJDHFSIDBISBIDBISGDIFGSDIUFIJJFGHJKGDHTFJGFHV
+                            <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
+                                <br>T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVSGHVDSD
+                                <br>TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVSGHVDSD
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
                             </h1>
+
                         </div>
                         <div class="image-container left-image">
                             <img class="image" src="images/no bg/1NoBG.png" alt="">
