added carousel sliding function

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                             </h1>
 
                         </div>
-                        <div class="image-container left-image">
+                        <div id="image-1" class="image-container image-1">
                             <img class="image" src="images/no bg/1NoBG.png" alt="">
                         </div>
-                        <div class="image-container center-image">
+                        <div id="image-2" class="image-container image-2">
                             <img class="image" src="images/no bg/2NoBG.png" alt="">
                         </div>
-                        <div class="image-container right-image">
+                        <div id="image-3" class="image-container image-3">
                             <img class="image" src="images/no bg/3NoBG.png" alt="">
                         </div>
                     </div>
