--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </h1>
 
                     </div>
-                    <div class="carousel-container">
+                    <div id="carousel-container">
 
                         <div id="image-1" class="image-container image-1">
                             <img class="image" src="images/no bg/1NoBG.png" alt="">
