better CSS for the carousel

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
                     </div>
                 </div>
                 <div class="right-section">
-                    <div class="background-text">
-                        <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
-                            <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
-                            <br>T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVSGHVDSD
-                            <br>TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVSGHVDSD
-                            <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
-                            <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSGHVDSD
-                        </h1>
 
-                    </div>
                     <div id="carousel-container">
+                        <div class="background-text">
+                            <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
+                                <br>T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVS
+                                <br>TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVS
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
+                            </h1>
+                        </div>
 
                         <div id="image-1" class="image-container image-1">
                             <img class="image" src="images/no bg/1NoBG.png" alt="">
