--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
                 </nav>
             </div>
         </nav>
-        <section class="hero">
+        <section id="home" class="hero">
             <div class="grid-container">
-                <div class="left-section">
+                <!--Heading-->
+                <div class="top-section">
                     <div class="hero__container">
                         <h1 class="hero__heading">Clock <span>reimagined</span></h1>
                     </div>
                 </div>
-                <div class="right-section">
-
+                <div class="bottom-section">
                     <div id="carousel-container">
+                        <!--Background blurred text-->
                         <div class="background-text">
                             <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
                                 <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
@@ -49,20 +50,20 @@
                             </h1>
                         </div>
 
-                        <div id="image-1" class="image-container image-1">
-                            <img class="image" src="images/no bg/1NoBG.png" alt="">
+                        <div class="image-container image-1">
+                            <img class="crop" src="images/no bg/1NoBG.png" alt="">
                         </div>
-                        <div id="image-2" class="image-container image-2">
-                            <img class="image" src="images/no bg/2NoBG.png" alt="">
+                        <div class="image-container image-2">
+                            <img class="crop" src="images/no bg/2NoBG.png" alt="">
                         </div>
-                        <div id="image-3" class="image-container image-3">
-                            <img class="image" src="images/no bg/3NoBG.png" alt="">
+                        <div class="image-container image-3">
+                            <img class="crop" src="images/no bg/3NoBG.png" alt="">
                         </div>
                     </div>
 
                 </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="container">
 
 
