--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                         </div>
 
                         <div class="image-container image-1">
-                            <img class="crop" src="images/no bg/1NoBG.png" alt="">
+                            <img id="img1" class="crop">
                         </div>
                         <div class="image-container image-2">
-                            <img class="crop" src="images/no bg/2NoBG.png" alt="">
+                            <img id="img2" class="crop">
                         </div>
                         <div class="image-container image-3">
-                            <img class="crop" src="images/no bg/3NoBG.png" alt="">
+                            <img id="img3" class="crop">
                         </div>
                     </div>
 
