--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                             </h1>
                         </div>
 
-                        <div class="image-container image-1">
-                            <img id="img1" class="crop">
+                        <div id="parent1" class="image-container">
+                            <img id="img1">
                         </div>
-                        <div class="image-container image-2">
-                            <img id="img2" class="crop">
+                        <div id="parent2" class="image-container">
+                            <img id="img2">
                         </div>
-                        <div class="image-container image-3">
-                            <img id="img3" class="crop">
+                        <div id="parent3" class="image-container">
+                            <img id="img3">
                         </div>
                     </div>
 
