final carousel with three images

--- a/index.html
+++ b/index.html
@@ -41,23 +41,20 @@
                     <div id="carousel-container">
                         <!--Background blurred text-->
                         <div class="background-text">
-                            <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
-                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
-                                <br>T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVS
-                                <br>TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVS
-                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
-                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVS
+                            <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                                <br>T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                                <br>TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVSDFSHG
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
                             </h1>
                         </div>
-
-                        <div id="parent1" class="image-container">
-                            <img id="img1">
-                        </div>
-                        <div id="parent2" class="image-container">
-                            <img id="img2">
-                        </div>
-                        <div id="parent3" class="image-container">
-                            <img id="img3">
+                        <div class="slider-container">
+                            <img id="img1" src="images/no bg/1NoBG.png" class="crop img-1">
+                            <img id="img2" src="images/no bg/2NoBG.png" class="crop img-2 center">
+                            <img id="img3" src="images/no bg/3NoBG.png" class="crop img-3">
+                            <img id="img4" src="images/no bg/3NoBG.png" class="crop img-4">
+                            <img id="img5" src="images/no bg/3NoBG.png" class="crop img-5">
                         </div>
                     </div>
 
