--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
                         </div>
                         <div class="slider-container">
                             <img id="img1" src="images/no bg/1NoBG.png" class="crop img-1">
-                            <img id="img2" src="images/no bg/2NoBG.png" class="crop img-2 center">
+                            <img id="img2" src="images/no bg/2NoBG.png" class="crop img-2">
                             <img id="img3" src="images/no bg/3NoBG.png" class="crop img-3">
-                            <img id="img4" src="images/no bg/1NoBG.png" class="crop img-4">
-                            <img id="img5" src="images/no bg/3NoBG.png" class="crop img-5">
+                            <img id="img4" src="images/no bg/4NoBG.png" class="crop img-4">
+                            <img id="img5" src="images/no bg/5NoBG.png" class="crop img-5">
+                            <!--img id="img6" src="images/no bg/6NoBG.png" class="crop img-6">
+                            <img id="img7" src="images/no bg/7NoBG.png" class="crop img-7"-->
                         </div>
                     </div>
 
