--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                             <img id="img3" src="images/no bg/3NoBG.png" class="crop img-3">
                             <img id="img4" src="images/no bg/4NoBG.png" class="crop img-4">
                             <img id="img5" src="images/no bg/5NoBG.png" class="crop img-5">
-                            <!--img id="img6" src="images/no bg/6NoBG.png" class="crop img-6">
-                            <img id="img7" src="images/no bg/7NoBG.png" class="crop img-7"-->
+                            <img id="img6" src="images/no bg/6NoBG.png" class="crop img-6">
+                            <img id="img7" src="images/no bg/7NoBG.png" class="crop img-7">
                         </div>
                     </div>
 
