save point without the grid template

--- a/index.html
+++ b/index.html
@@ -32,10 +32,8 @@
         <section id="home" class="hero">
             <div class="grid-container">
                 <!--Heading-->
-                <div class="top-section">
-                    <div class="hero__container">
-                        <h1 class="hero__heading">Clock <span>reimagined</span></h1>
-                    </div>
+                <div class="heading">
+                    <h1 class="heading-text">Clock <span>reimagined</span></h1>
                 </div>
                 <div class="bottom-section">
                     <div id="carousel-container">
@@ -63,11 +61,16 @@
                 </div>
         </section>
         <section id="about" class="about">
-            <div class="container">
-
-
+            <div class="heading-container">
+                <h1>Features</h1>
+            </div>
+            <div class="feature-container">
+                <h1>List</h1>
             </div>
 
+        </section>
+        <section id="contact" class="contact">
+            <div class="container"></div>
         </section>
         </div>
         <script src="script/script.js"></script>
