grid initial commit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>WordClock support page</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles/styles.css" />
-
 </head>
 
 <body>
@@ -29,51 +28,53 @@
                 </nav>
             </div>
         </nav>
-        <section id="home" class="hero">
-            <div class="grid-container">
-                <!--Heading-->
-                <div class="heading">
-                    <h1 class="heading-text">Clock <span>reimagined</span></h1>
-                </div>
-                <div class="bottom-section">
-                    <div id="carousel-container">
-                        <!--Background blurred text-->
-                        <div class="background-text">
-                            <h1>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                                <br>T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                                <br>TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVSDFSHG
-                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                                <br>TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
-                            </h1>
-                        </div>
-                        <div class="slider-container">
-                            <img id="img1" src="images/no bg/1NoBG.png" class="crop img-1">
-                            <img id="img2" src="images/no bg/2NoBG.png" class="crop img-2">
-                            <img id="img3" src="images/no bg/3NoBG.png" class="crop img-3">
-                            <img id="img4" src="images/no bg/4NoBG.png" class="crop img-4">
-                            <img id="img5" src="images/no bg/5NoBG.png" class="crop img-5">
-                            <img id="img6" src="images/no bg/6NoBG.png" class="crop img-6">
-                            <img id="img7" src="images/no bg/7NoBG.png" class="crop img-7">
-                        </div>
+        <div class="grid">
+            <!--Heading-->
+            <section class="heading">
+                <h1 class="heading-text">Clock <span>reimagined</span></h1>
+            </section>
+            <!--Carousel-->
+            <section id="home" class="hero">
+                <div id="carousel-container">
+                    <!--Background blurred text-->
+                    <div class="background-text">
+                        <h1>
+                            TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                            <br />TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                            <br />T<span>EXTKUHG</span>GGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                            <br />TEXTKUHGGGGJNHGB<span>JHGSH</span>FDANGHEHGVSDFSHG
+                            <br />TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                            <br />TEXTKUHGGGGJNHGBJHGSHFDANGHEHGVSDFSHG
+                        </h1>
                     </div>
-
+                    <!--Sliding Carousel-->
+                    <div class="slider-container">
+                        <img id="img1" src="images/no bg/1NoBG.png" class="crop img-1" />
+                        <img id="img2" src="images/no bg/2NoBG.png" class="crop img-2" />
+                        <img id="img3" src="images/no bg/3NoBG.png" class="crop img-3" />
+                        <img id="img4" src="images/no bg/4NoBG.png" class="crop img-4" />
+                        <img id="img5" src="images/no bg/5NoBG.png" class="crop img-5" />
+                        <img id="img6" src="images/no bg/6NoBG.png" class="crop img-6" />
+                        <img id="img7" src="images/no bg/7NoBG.png" class="crop img-7" />
+                    </div>
                 </div>
-        </section>
-        <section id="about" class="about">
-            <div class="heading-container">
-                <h1>Features</h1>
-            </div>
-            <div class="feature-container">
-                <h1>List</h1>
-            </div>
-
-        </section>
-        <section id="contact" class="contact">
-            <div class="container"></div>
-        </section>
+            </section>
+            <!--About section-->
+            <section id="about" class="about">
+                <div class="heading-container">
+                    <h1>Features</h1>
+                </div>
+                <div class="feature-container">
+                    <h1>List</h1>
+                </div>
+            </section>
+            <!--Contact section-->
+            <section id="contact" class="contact">
+                <div class="container"></div>
+            </section>
         </div>
-        <script src="script/script.js"></script>
+    </div>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
