grid set up initial

--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
             </div>
         </nav>
         <div class="grid">
-            <!--Heading-->
-            <section class="heading">
-                <h1 class="heading-text">Clock <span>reimagined</span></h1>
-            </section>
+            <!--Title-->
+            <div class="title-heading">
+                <!--Title Heading-->
+                <h1 class="title-text-shadow">Clock <span>reimagined</span></h1>
+                <h1 class="title-text">Clock <span>reimagined</span></h1>
+            </div>
             <!--Carousel-->
-            <section id="home" class="hero">
-                <div id="carousel-container">
+            <div class="carousel-container">
+                <div class="container-div">
                     <!--Background blurred text-->
                     <div class="background-text">
                         <h1>
@@ -58,20 +60,28 @@
                         <img id="img7" src="images/no bg/7NoBG.png" class="crop img-7" />
                     </div>
                 </div>
-            </section>
+            </div>
             <!--About section-->
-            <section id="about" class="about">
-                <div class="heading-container">
-                    <h1>Features</h1>
-                </div>
-                <div class="feature-container">
-                    <h1>List</h1>
-                </div>
-            </section>
+            <div class="about-heading">
+                <h1 class="about-text-shadow">About</h1>
+                <h1 class="about-text">About</h1>
+            </div>
+            <div class="about-content">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quidem unde ipsa repellat impedit porro sint voluptates voluptatibus culpa necessitatibus.
+                </p>
+            </div>
             <!--Contact section-->
-            <section id="contact" class="contact">
-                <div class="container"></div>
-            </section>
+            <div class="contact-heading">
+                <h1 class="contact-text-shadow">Contact</h1>
+                <h1 class="contact-text">Contact</h1>
+            </div>
+            <div class="contact-content">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quidem unde ipsa repellat impedit porro sint voluptates voluptatibus culpa necessitatibus.
+                </p>
+            </div>
+            <div class="footer">Footer</div>
         </div>
     </div>
     <script src="script/script.js"></script>
