--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
             <!--Title-->
             <div class="title-heading">
                 <!--Title Heading-->
-                <h1 class="title-text-shadow">Clock <span>reimagined</span></h1>
-                <h1 class="title-text">Clock <span>reimagined</span></h1>
+                <div class="heading-div">
+                    <h1 class="title-text">Clock <span>reimagined</span></h1>
+                    <!--h1 class="title-text-shadow">Clock <span>reimagined</span></h1-->
+                </div>
             </div>
             <!--Carousel-->
             <div class="carousel-container">
