almost done with CSS -> need to add content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <!--Title Heading-->
                 <div class="heading-div">
                     <h1 class="title-text">Clock <span>reimagined</span></h1>
-                    <!--h1 class="title-text-shadow">Clock <span>reimagined</span></h1-->
                 </div>
             </div>
             <!--Carousel-->
@@ -65,22 +64,23 @@
             </div>
             <!--About section-->
             <div class="about-heading">
-                <h1 class="about-text-shadow">About</h1>
                 <h1 class="about-text">About</h1>
             </div>
             <div class="about-content">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quidem unde ipsa repellat impedit porro sint voluptates voluptatibus culpa necessitatibus.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptatibus suscipit facilis corporis exercitationem tempore, molestias tenetur alias sed debitis illo deserunt dicta, magnam itaque libero vero sit sequi, maxime officia non iusto in! Dolore,
+                    fuga autem. Ipsa amet accusantium reiciendis aliquam nesciunt, iste alias nam distinctio, sequi corrupti et!
                 </p>
             </div>
             <!--Contact section-->
             <div class="contact-heading">
-                <h1 class="contact-text-shadow">Contact</h1>
                 <h1 class="contact-text">Contact</h1>
             </div>
             <div class="contact-content">
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quidem unde ipsa repellat impedit porro sint voluptates voluptatibus culpa necessitatibus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum soluta repellendus iusto amet ipsam quod dolores unde eos, voluptatibus quisquam cum recusandae. Unde iusto molestias blanditiis, ducimus voluptatum cupiditate repellat accusantium eos quo
+                    suscipit labore commodi, quod natus distinctio veritatis voluptates repellendus facere porro saepe libero itaque dignissimos dolores. Expedita, assumenda vitae dolorum enim iure error minima harum dolor optio dolorem dicta officia
+                    voluptate et doloribus quaerat? Maxime voluptatum sapiente amet impedit voluptatem alias, dolorem ea tempore error veritatis quos hic blanditiis consectetur molestias itaque ad, tempora dolor. Culpa, quas!
                 </p>
             </div>
             <div class="footer">Footer</div>
