about section complete

--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
             <div class="about-heading">
                 <h1 class="about-text">About</h1>
             </div>
-            <div class="about-content">
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptatibus suscipit facilis corporis exercitationem tempore, molestias tenetur alias sed debitis illo deserunt dicta, magnam itaque libero vero sit sequi, maxime officia non iusto in! Dolore,
-                    fuga autem. Ipsa amet accusantium reiciendis aliquam nesciunt, iste alias nam distinctio, sequi corrupti et!
-                </p>
-            </div>
+            <p class="about-tag-line">
+                A <span>premium clock</span> you need that does it all.
+            </p>
+            <ul class="list">
+                <li>Set reminders</li>
+                <li>Change colors as per your preferences</li>
+                <li>React to the sound around you</li>
+            </ul>
+            <div class="animated-image-about">hello</div>
             <!--Contact section-->
             <div class="contact-heading">
                 <h1 class="contact-text">Contact</h1>
