--- a/index.html
+++ b/index.html
@@ -12,27 +12,34 @@
 
 <body>
     <div class="main-container">
-        <nav class="navbar">
-            <div class="container">
+        <div class="nav-container">
+            <nav class="navbar">
                 <a class="logo" href="#home"><span>Word</span>Clock</a>
-
-                <img class="mobile-menu" id="mobile-cta" src="images/Hamburger_icon.svg" alt="hamburger-icon" />
-
-                <nav>
-                    <img src="images/close.svg" alt="close button" />
-                    <ul class="primary-nav">
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <!--img class="mobile-menu" id="mobile-cta" src="images/Hamburger_icon.svg" alt="hamburger-icon" /-->
+                </a>
+                <div class="navbar-links">
+                    <ul id="u-list">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact" id="contact-button">Contact</a></li>
                     </ul>
-                </nav>
-            </div>
-        </nav>
+                </div>
+
+                <!--nav>
+                    <img src="images/close.svg" alt="close button" />
+                    
+                </nav-->
+            </nav>
+        </div>
         <div class="grid">
             <!--Title-->
             <div class="title-heading">
                 <!--Title Heading-->
-                <div class="heading-div">
+                <div id="home" class="heading-div">
                     <h1 class="title-text">Clock <span>reimagined</span></h1>
                 </div>
             </div>
@@ -63,7 +70,7 @@
                 </div>
             </div>
             <!--About section-->
-            <div class="about-heading">
+            <div id="about" class="about-heading">
                 <h1 class="about-text">About</h1>
             </div>
             <p class="about-tag-line">
@@ -76,7 +83,7 @@
             </ul>
             <div class="animated-image-about">hello</div>
             <!--Contact section-->
-            <div class="contact-heading">
+            <div id="contact" class="contact-heading">
                 <h1 class="contact-text">Contact</h1>
             </div>
             <div class="contact-content">
